--- a/app/src/main/res/layout/fragment_register_two.xml
+++ b/app/src/main/res/layout/fragment_register_two.xml
@@ -26,7 +26,8 @@ tools:context=".ui.auth.RegisterTwoFragment">
             android:paddingBottom="30dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/register_two_text_title">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/register_two_form_text_title"
