--- a/app/src/main/res/layout/fragment_profile_individual.xml
+++ b/app/src/main/res/layout/fragment_profile_individual.xml
@@ -1,22 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfileFragment">
-
-    <TextView
-        android:id="@+id/text_home"
+    tools:context=".ui.profile_individual.ProfileIndividualFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/profile_individual_text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextLight"
+            android:text="Profile"
+            android:textSize="28sp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="15dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_individual_circleimage"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:src="@drawable/default_profile_picture"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_individual_text_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/profile_individual_text_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextMedium"
+            android:text="Haris Sabotic"
+            android:textSize="26sp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_individual_circleimage" />
+
+        <LinearLayout
+            android:id="@+id/profile_individual_layout_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/card_background_10"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_individual_text_name"
+            app:layout_constraintEnd_toStartOf="@id/profile_individual_layout_email"
+            app:layout_constraintStart_toStartOf="parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/phone"
+                app:tint="@color/white"
+                android:layout_marginEnd="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="123 123 123"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:paddingTop="3dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/profile_individual_layout_email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/card_background_10"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:gravity="center"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_individual_text_name"
+            app:layout_constraintStart_toEndOf="@id/profile_individual_layout_phone"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/email"
+                app:tint="@color/white"
+                android:layout_marginEnd="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="haris@mail.com"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:paddingTop="3dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/profile_individual_text_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur a sapien eu porta. In ut quam metus. Fusce pretium sit amet nibh vitae vulputate. Nullam enim sem, iaculis ultricies ex vel, semper malesuada dolor. Mauris augue mi, finibus sit amet tristique id, tempus et sem. Aliquam et quam nec tellus dictum euismod. Nullam sem lacus, euismod vel odio non, eleifend faucibus elit."
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:justificationMode="inter_word"
+            android:background="@drawable/card_background_15"
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_individual_layout_phone" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
