Add ad details and company details screens

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/navigation_ads_individual"
         android:icon="@drawable/baseline_article_24"
-        android:title="Ads" />
+        android:title="Oglasi" />
 
     <item
         android:id="@+id/navigation_profile_individual"
         android:icon="@drawable/baseline_account_circle_24"
-        android:title="Profile" />
+        android:title="Profil" />
 
 </menu>
