--- a/app/src/main/res/layout/fragment_profile_individual.xml
+++ b/app/src/main/res/layout/fragment_profile_individual.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile_individual.ProfileIndividualFragment">
+    tools:context=".ui.individual.profile.ProfileIndividualFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -33,7 +33,7 @@
                 android:id="@+id/profile_individual_circleimage"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/default_profile_picture"
+                android:src="@color/black"
                 android:elevation="10dp"
                 android:layout_marginTop="40dp"
                 app:layout_constraintTop_toBottomOf="@id/profile_individual_text_title"
@@ -42,16 +42,29 @@
 
             <TextView
                 android:id="@+id/profile_individual_text_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/TextMedium"
-                android:text="Haris Sabotic"
                 android:textSize="26sp"
                 android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_individual_circleimage" />
+
+            <ImageView
+                android:id="@+id/profile_individual_image_edit_name"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/edit"
+                android:visibility="gone"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintTop_toTopOf="@id/profile_individual_text_name"
+                app:layout_constraintBottom_toBottomOf="@id/profile_individual_text_name"
+                app:layout_constraintStart_toEndOf="@id/profile_individual_text_name" />
 
             <LinearLayout
                 android:id="@+id/profile_individual_layout_phone"
@@ -77,9 +90,9 @@
                     app:tint="@color/white"
                     android:layout_marginEnd="10dp" />
                 <TextView
+                    android:id="@+id/profile_individual_text_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="123 123 123"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     android:textColor="@color/white"
@@ -110,9 +123,9 @@
                     app:tint="@color/white"
                     android:layout_marginEnd="10dp" />
                 <TextView
+                    android:id="@+id/profile_individual_text_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="haris@mail.com"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     android:textColor="@color/white"
@@ -123,7 +136,6 @@
                 android:id="@+id/profile_individual_text_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur a sapien eu porta. In ut quam metus. Fusce pretium sit amet nibh vitae vulputate. Nullam enim sem, iaculis ultricies ex vel, semper malesuada dolor. Mauris augue mi, finibus sit amet tristique id, tempus et sem. Aliquam et quam nec tellus dictum euismod. Nullam sem lacus, euismod vel odio non, eleifend faucibus elit."
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 android:justificationMode="inter_word"
@@ -134,6 +146,35 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/profile_individual_layout_phone" />
+
+            <LinearLayout
+                android:id="@+id/profile_individual_layout_cv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="10dp"
+                android:background="@drawable/card_background_15"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="20dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/profile_individual_text_about"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/cv"
+                    app:tint="@color/white" />
+                <TextView
+                    style="@style/TextBold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CV"
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    android:paddingTop="8dp"
+                    android:layout_marginStart="10dp" />
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
