--- a/app/src/main/res/layout/fragment_company_details_individual.xml
+++ b/app/src/main/res/layout/fragment_company_details_individual.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.company_details_individual.CompanyDetailsIndividualFragment">
+    tools:context=".ui.individual.company_details.CompanyDetailsIndividualFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
