--- a/app/src/main/res/layout/fragment_register_two.xml
+++ b/app/src/main/res/layout/fragment_register_two.xml
@@ -5,100 +5,108 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".ui.auth.RegisterTwoFragment">
+    <TextView
+        android:id="@+id/register_two_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/TextBlack"
+        android:text="REGISTRUJ SE"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/auth_form_background"
+        android:clipToPadding="false"
+        android:paddingBottom="30dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/register_two_text_title"
+            android:id="@+id/register_two_form_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextBlack"
-            android:text="REGISTRUJ SE"
-            android:textSize="32sp"
-            android:textColor="@color/black"
+            style="@style/TextBold"
+            android:text="Unesi svoje podatke"
+            android:textSize="28sp"
+            android:textColor="@color/black_alpha_70"
             android:textAlignment="center"
+            android:layout_marginHorizontal="15dp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/register_two_form_textinput_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/auth_form_background"
-            android:clipToPadding="false"
-            android:paddingBottom="30dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Ime"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <TextView
-                android:id="@+id/register_two_form_text_title"
+            app:layout_constraintTop_toBottomOf="@id/register_two_form_text_title">
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TextBold"
-                android:text="Unesi svoje podatke"
-                android:textSize="28sp"
-                android:textColor="@color/black_alpha_70"
-                android:textAlignment="center"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/register_two_form_textinput_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/register_two_form_textinput_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Email"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_name">
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Ime"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/register_two_form_text_title">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/register_two_form_textinput_email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/register_two_form_textinput_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Lozinka"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_email">
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Email"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_name">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/register_two_form_textinput_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Lozinka"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_email">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword" />
-            </com.google.android.material.textfield.TextInputLayout>
+        <Button
+            android:id="@+id/register_two_form_button_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextBold"
+            android:text="REGISTRUJ SE"
+            android:textSize="20sp"
+            android:paddingTop="10dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_password" />
 
-            <Button
-                android:id="@+id/register_two_form_button_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/TextBold"
-                android:text="REGISTRUJ SE"
-                android:textSize="20sp"
-                android:paddingTop="10dp"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/register_two_form_textinput_password" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <ProgressBar
+        android:id="@+id/register_progress_bar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
