--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,6 +15,18 @@
             app:popUpToInclusive="true"
             app:popUpTo="@id/navigation_splash"
             />
+        <action
+            android:id="@+id/action_splash_to_ads_individual"
+            app:destination="@id/navigation_ads_individual"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/navigation_splash"
+            />
+        <action
+            android:id="@+id/action_splash_to_ads_company"
+            app:destination="@id/navigation_ads_company"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/navigation_splash"
+            />
     </fragment>
 
     <fragment
@@ -24,12 +36,16 @@
         <action
             android:id="@+id/action_login_to_register_one"
             app:destination="@id/navigation_register_one"
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/navigation_login"
             />
         <action
             android:id="@+id/action_login_to_ads_individual"
             app:destination="@id/navigation_ads_individual"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/navigation_login"
+            />
+        <action
+            android:id="@+id/action_login_to_ads_company"
+            app:destination="@id/navigation_ads_company"
             app:popUpToInclusive="true"
             app:popUpTo="@id/navigation_login"
             />
@@ -42,14 +58,10 @@
         <action
             android:id="@+id/action_register_one_to_register_two"
             app:destination="@id/navigation_register_two"
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/navigation_register_one"
             />
         <action
             android:id="@+id/action_register_one_to_login"
             app:destination="@id/navigation_login"
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/navigation_register_one"
             />
     </fragment>
 
@@ -57,17 +69,29 @@
         android:id="@+id/navigation_register_two"
         android:name="com.ets.inven.ui.auth.RegisterTwoFragment"
         tools:layout="@layout/fragment_register_two">
+        <argument
+            android:name="type"
+            app:argType="string" />
+
         <action
             android:id="@+id/action_register_two_to_ads_individual"
             app:destination="@id/navigation_ads_individual"
             app:popUpToInclusive="true"
             app:popUpTo="@id/navigation_register_two"
             />
+        <action
+            android:id="@+id/action_register_two_to_ads_company"
+            app:destination="@id/navigation_ads_company"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/navigation_register_two"
+            />
     </fragment>
+
+    <!-- INDIVIDUAL -->
 
     <fragment
         android:id="@+id/navigation_ads_individual"
-        android:name="com.ets.inven.ui.ads_individual.AdsIndividualFragment"
+        android:name="com.ets.inven.ui.individual.ads.AdsIndividualFragment"
         tools:layout="@layout/fragment_ads_individual">
         <action
             android:id="@+id/action_ads_individual_to_ad_details_individual"
@@ -76,12 +100,12 @@
 
     <fragment
         android:id="@+id/navigation_profile_individual"
-        android:name="com.ets.inven.ui.profile_individual.ProfileIndividualFragment"
+        android:name="com.ets.inven.ui.individual.profile.ProfileIndividualFragment"
         tools:layout="@layout/fragment_profile_individual" />
 
     <fragment
         android:id="@+id/navigation_ad_details_individual"
-        android:name="com.ets.inven.ui.ad_details_individual.AdDetailsIndividualFragment"
+        android:name="com.ets.inven.ui.individual.ad_details.AdDetailsIndividualFragment"
         tools:layout="@layout/fragment_ad_details_individual">
         <argument
             android:name="adData"
@@ -93,11 +117,23 @@
 
     <fragment
         android:id="@+id/navigation_company_details_individual"
-        android:name="com.ets.inven.ui.company_details_individual.CompanyDetailsIndividualFragment"
+        android:name="com.ets.inven.ui.individual.company_details.CompanyDetailsIndividualFragment"
         tools:layout="@layout/fragment_company_details_individual">
         <argument
             android:name="companyData"
             app:argType="com.ets.inven.models.CompanyModel" />
     </fragment>
 
+    <!-- COMPANY -->
+
+    <fragment
+        android:id="@+id/navigation_ads_company"
+        android:name="com.ets.inven.ui.company.ads.AdsCompanyFragment"
+        tools:layout="@layout/fragment_ads_company">
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_profile_company"
+        android:name="com.ets.inven.ui.company.profile.ProfileCompanyFragment"
+        tools:layout="@layout/fragment_profile_company" />
 </navigation>
