--- a/app/src/main/res/layout/fragment_ad_details_individual.xml
+++ b/app/src/main/res/layout/fragment_ad_details_individual.xml
@@ -1,122 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ad_details_individual_swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.individual.ad_details.AdDetailsIndividualFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingBottom="50dp">
-
-        <TextView
-            android:id="@+id/ad_details_individual_text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextMedium"
-            android:text="Ad name"
-            android:textAllCaps="true"
-            android:textSize="28sp"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="15dp"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/ad_details_individual_image_parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="15dp"
-            app:layout_constraintTop_toBottomOf="@id/ad_details_individual_text_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-            <ImageView
-                android:id="@+id/ad_details_individual_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@color/black" />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/ad_details_individual_text_about"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur a sapien eu porta. In ut quam metus. Fusce pretium sit amet nibh vitae vulputate. Nullam enim sem, iaculis ultricies ex vel, semper malesuada dolor. Mauris augue mi, finibus sit amet tristique id, tempus et sem. Aliquam et quam nec tellus dictum euismod. Nullam sem lacus, euismod vel odio non, eleifend faucibus elit."
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:justificationMode="inter_word"
-            android:elevation="10dp"
-            android:background="@drawable/card_background_15"
-            android:paddingVertical="15dp"
-            android:paddingHorizontal="20dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/ad_details_individual_image_parent" />
-
+        android:layout_height="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/ad_details_individual_layout_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:background="@drawable/card_background_15"
-            android:paddingBottom="15dp"
-            android:paddingTop="20dp"
-            android:paddingHorizontal="20dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/ad_details_individual_text_about">
-            
-            <TextView
-                android:id="@+id/ad_details_individual_info_text_free_positions_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Slobodna mjesta:   "
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+            android:clipToPadding="false"
+            android:paddingBottom="50dp">
 
             <TextView
-                android:id="@+id/ad_details_individual_info_text_free_positions"
-                android:layout_width="wrap_content"
+                android:id="@+id/ad_details_individual_text_title"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/TextMedium"
-                android:text="7"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="@id/ad_details_individual_info_text_free_positions_label"
-                app:layout_constraintBottom_toBottomOf="@id/ad_details_individual_info_text_free_positions_label"
-                app:layout_constraintStart_toEndOf="@id/ad_details_individual_info_text_free_positions_label" />
+                android:text="Ad name"
+                android:textAllCaps="true"
+                android:textSize="28sp"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="15dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ad_details_individual_image_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginHorizontal="15dp"
+                app:layout_constraintTop_toBottomOf="@id/ad_details_individual_text_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+                <ImageView
+                    android:id="@+id/ad_details_individual_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:src="@color/black" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/ad_details_individual_info_text_company_label"
-                android:layout_width="wrap_content"
+                android:id="@+id/ad_details_individual_text_about"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Kompanija:   "
-                android:textSize="18sp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur a sapien eu porta. In ut quam metus. Fusce pretium sit amet nibh vitae vulputate. Nullam enim sem, iaculis ultricies ex vel, semper malesuada dolor. Mauris augue mi, finibus sit amet tristique id, tempus et sem. Aliquam et quam nec tellus dictum euismod. Nullam sem lacus, euismod vel odio non, eleifend faucibus elit."
+                android:textSize="14sp"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@id/ad_details_individual_info_text_free_positions"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:justificationMode="inter_word"
+                android:elevation="10dp"
+                android:background="@drawable/card_background_15"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="20dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/ad_details_individual_image_parent" />
 
-            <TextView
-                android:id="@+id/ad_details_individual_info_text_company"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ad_details_individual_layout_info"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TextMedium"
-                android:text="VOLI d.o.o."
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="@id/ad_details_individual_info_text_company_label"
-                app:layout_constraintBottom_toBottomOf="@id/ad_details_individual_info_text_company_label"
-                app:layout_constraintStart_toEndOf="@id/ad_details_individual_info_text_company_label" />
+                android:elevation="10dp"
+                android:background="@drawable/card_background_15"
+                android:paddingBottom="15dp"
+                android:paddingTop="20dp"
+                android:paddingHorizontal="20dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/ad_details_individual_text_about">
+
+                <TextView
+                    android:id="@+id/ad_details_individual_info_text_free_positions_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Slobodna mjesta:   "
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/ad_details_individual_info_text_free_positions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TextMedium"
+                    android:text="7"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="@id/ad_details_individual_info_text_free_positions_label"
+                    app:layout_constraintBottom_toBottomOf="@id/ad_details_individual_info_text_free_positions_label"
+                    app:layout_constraintStart_toEndOf="@id/ad_details_individual_info_text_free_positions_label" />
+
+                <TextView
+                    android:id="@+id/ad_details_individual_info_text_company_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kompanija:   "
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/ad_details_individual_info_text_free_positions"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/ad_details_individual_info_text_company"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TextMedium"
+                    android:text="VOLI d.o.o."
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="@id/ad_details_individual_info_text_company_label"
+                    app:layout_constraintBottom_toBottomOf="@id/ad_details_individual_info_text_company_label"
+                    app:layout_constraintStart_toEndOf="@id/ad_details_individual_info_text_company_label" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    </ScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
