--- a/app/src/main/res/layout/fragment_profile_company.xml
+++ b/app/src/main/res/layout/fragment_profile_company.xml
@@ -1,23 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/profile_individual_swiperefresh"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/profile_company_swiperefresh"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ui.company.profile.ProfileCompanyFragment">
+<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.individual.profile.ProfileIndividualFragment">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingBottom="50dp">
+
+        <TextView
+            android:id="@+id/profile_company_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:paddingBottom="50dp">
+            style="@style/TextLight"
+            android:text="Profil"
+            android:textSize="28sp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="15dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/profile_company_image_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="10dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginHorizontal="15dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/profile_company_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@color/black" />
+        </androidx.cardview.widget.CardView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/profile_company_text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextMedium"
+            android:textSize="26sp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_image_parent" />
 
-    </ScrollView>
+        <ImageView
+            android:id="@+id/profile_company_image_edit_name"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/edit"
+            android:visibility="gone"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toTopOf="@id/profile_company_text_name"
+            app:layout_constraintBottom_toBottomOf="@id/profile_company_text_name"
+            app:layout_constraintStart_toEndOf="@id/profile_company_text_name" />
+
+        <LinearLayout
+            android:id="@+id/profile_company_layout_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:elevation="10dp"
+            android:background="@drawable/card_background_10"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_name"
+            app:layout_constraintBottom_toBottomOf="@id/profile_company_layout_email"
+            app:layout_constraintEnd_toStartOf="@id/profile_company_layout_email"
+            app:layout_constraintStart_toStartOf="parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/phone"
+                app:tint="@color/white"
+                android:layout_marginEnd="10dp" />
+            <TextView
+                android:id="@+id/profile_company_text_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:paddingTop="3dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/profile_company_layout_email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:elevation="10dp"
+            android:background="@drawable/card_background_10"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:gravity="center"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_name"
+            app:layout_constraintBottom_toBottomOf="@id/profile_company_layout_phone"
+            app:layout_constraintStart_toEndOf="@id/profile_company_layout_phone"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/email"
+                app:tint="@color/white"
+                android:layout_marginEnd="10dp" />
+            <TextView
+                android:id="@+id/profile_company_text_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:paddingTop="3dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/profile_company_text_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:justificationMode="inter_word"
+            android:elevation="10dp"
+            android:background="@drawable/card_background_15"
+            android:paddingVertical="15dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_layout_phone" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
