--- a/app/src/main/res/layout/fragment_ads_individual.xml
+++ b/app/src/main/res/layout/fragment_ads_individual.xml
@@ -34,8 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 app:singleLine="true"
-                app:chipSpacingHorizontal="10dp"
-                app:selectionRequired="true">
+                app:chipSpacingHorizontal="10dp">
                 <com.google.android.material.chip.Chip
                     android:id="@+id/ads_individual_filters_chip_jobs"
                     android:layout_width="wrap_content"
