--- a/app/src/main/res/layout/fragment_ad_application_details_company.xml
+++ b/app/src/main/res/layout/fragment_ad_application_details_company.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.individual.company_details.CompanyDetailsIndividualFragment">
+    tools:context="com.ets.inven.ui.company.ad_application_details.AdApplicationDetailsCompanyFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
         android:paddingBottom="50dp">
 
         <TextView
-            android:id="@+id/company_details_individual_text_title"
+            android:id="@+id/ad_application_details_company_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/TextMedium"
@@ -24,26 +24,19 @@
             android:layout_marginHorizontal="15dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/company_details_individual_image_parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="15dp"
-            app:layout_constraintTop_toBottomOf="@id/company_details_individual_text_title"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ad_application_details_company_image"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:src="@color/black"
+            android:elevation="10dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/ad_application_details_company_text_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-            <ImageView
-                android:id="@+id/company_details_individual_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@color/black" />
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/company_details_individual_text_about"
+            android:id="@+id/ad_application_details_company_text_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -55,10 +48,10 @@
             android:paddingHorizontal="20dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/company_details_individual_image_parent" />
+            app:layout_constraintTop_toBottomOf="@id/ad_application_details_company_image" />
 
         <LinearLayout
-            android:id="@+id/company_details_individual_layout_phone"
+            android:id="@+id/ad_application_details_company_layout_phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -70,9 +63,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/company_details_individual_text_about"
-            app:layout_constraintBottom_toBottomOf="@id/company_details_individual_layout_email"
-            app:layout_constraintEnd_toStartOf="@id/company_details_individual_layout_email"
+            app:layout_constraintTop_toBottomOf="@id/ad_application_details_company_text_about"
+            app:layout_constraintBottom_toBottomOf="@id/ad_application_details_company_layout_email"
+            app:layout_constraintEnd_toStartOf="@id/ad_application_details_company_layout_email"
             app:layout_constraintStart_toStartOf="parent">
             <ImageView
                 android:layout_width="wrap_content"
@@ -92,7 +85,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/company_details_individual_layout_email"
+            android:id="@+id/ad_application_details_company_layout_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -104,9 +97,9 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/company_details_individual_text_about"
-            app:layout_constraintBottom_toBottomOf="@id/company_details_individual_layout_phone"
-            app:layout_constraintStart_toEndOf="@id/company_details_individual_layout_phone"
+            app:layout_constraintTop_toBottomOf="@id/ad_application_details_company_text_about"
+            app:layout_constraintBottom_toBottomOf="@id/ad_application_details_company_layout_phone"
+            app:layout_constraintStart_toEndOf="@id/ad_application_details_company_layout_phone"
             app:layout_constraintEnd_toEndOf="parent">
             <ImageView
                 android:layout_width="wrap_content"
@@ -123,6 +116,35 @@
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:paddingTop="3dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ad_application_details_company_layout_cv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="10dp"
+            android:background="@drawable/card_background_15"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/ad_application_details_company_layout_email"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/cv"
+                app:tint="@color/white" />
+            <TextView
+                style="@style/TextBold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CV"
+                android:textColor="@color/white"
+                android:textSize="28sp"
+                android:paddingTop="8dp"
+                android:layout_marginStart="10dp" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
