--- a/app/src/main/res/layout/fragment_profile_company.xml
+++ b/app/src/main/res/layout/fragment_profile_company.xml
@@ -73,6 +73,19 @@ tools:context=".ui.company.profile.ProfileCompanyFragment">
             app:layout_constraintBottom_toBottomOf="@id/profile_company_text_name"
             app:layout_constraintStart_toEndOf="@id/profile_company_text_name" />
 
+        <TextView
+            android:id="@+id/profile_company_text_log_out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Izloguj se"
+            android:textSize="16sp"
+            android:textColor="#D74F4F"
+            android:textAlignment="center"
+            android:layout_marginHorizontal="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_name" />
+
         <LinearLayout
             android:id="@+id/profile_company_layout_phone"
             android:layout_width="0dp"
@@ -86,7 +99,7 @@ tools:context=".ui.company.profile.ProfileCompanyFragment">
             android:layout_marginStart="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/profile_company_text_name"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_log_out"
             app:layout_constraintBottom_toBottomOf="@id/profile_company_layout_email"
             app:layout_constraintEnd_toStartOf="@id/profile_company_layout_email"
             app:layout_constraintStart_toStartOf="parent">
@@ -119,7 +132,7 @@ tools:context=".ui.company.profile.ProfileCompanyFragment">
             android:layout_marginStart="5dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/profile_company_text_name"
+            app:layout_constraintTop_toBottomOf="@id/profile_company_text_log_out"
             app:layout_constraintBottom_toBottomOf="@id/profile_company_layout_phone"
             app:layout_constraintStart_toEndOf="@id/profile_company_layout_phone"
             app:layout_constraintEnd_toEndOf="parent">
